# PluginStatServer

./: Cargo.toml  Dockerfile
src/: appdata.rs  collector.rs  common.rs  main.rs  mysql.rs
src/endpoints/: metrics.rs  mod.rs  report.rs  report_stat.rs
