[package]
name = "stat_server"
version = "0.1.0"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
actix-web = "3.3.2"
actix-cors = "0.5.4"
mysql = "20.1.0"
prometheus = "0.12.0"
rand = "0.8.3"
chrono = "0.4.19"
crossbeam-channel = "0.5.1"
lazy_static = "1.4.0"
